@@ -1,3 +1,4 @@
+Micro tab: Changed crystal sizes and limit amounts to default to 1.00 mol/L max concentration
 # 0.00.88 (55217) Aug 15, 2011
 Micro tab: Added new images for micro sugar and salt shakers
 Micro tab: Factored out SoluteConstituent
